# femeter

./: .gitignore  .gitmodules  AUTOWORK.md  BLOCKERS.md  CHANGELOG.md  Cargo.toml  DEVELOPMENT_PLAN.md  README.md  RELEASE_NOTES.md  TASKS.md  cargo  cargo_output.txt  rust_out  test_hdlc_connection.py  test_snrm_parse.py
crates/bench-tests/: Cargo.toml
crates/bench-tests/src/: lib.rs
crates/dlms-apdu/: Cargo.toml
crates/dlms-apdu/src/: action.rs  block_transfer.rs  codec.rs  event.rs  exception.rs  get.rs  initiate.rs  lib.rs  selective.rs  set.rs  types.rs
crates/dlms-apdu/tests/: apdu_hdlc_e2e.rs  set_action_block_tests.rs
crates/dlms-asn1/: Cargo.toml
crates/dlms-asn1/src/: aare.rs  aarq.rs  ber.rs  conformance.rs  context.rs  initiate.rs  lib.rs  rlrq_rlre.rs
crates/dlms-axdr/: Cargo.toml
crates/dlms-axdr/src/: compact.rs  datetime_codec.rs  decoder.rs  encoder.rs  lib.rs
crates/dlms-core/: Cargo.toml
crates/dlms-core/src/: access.rs  datetime.rs  errors.rs  lib.rs  obis.rs  traits.rs  types.rs  units.rs
crates/dlms-cosem/: CCargo.toml  Cargo.toml
crates/dlms-cosem/src/: base.rs  lib.rs
crates/dlms-cosem/src/data_register/: ic1_data.rs  ic26_utility_tables.rs  ic3_register.rs  ic4_extended_register.rs  ic5_demand_register.rs  ic61_register_table.rs  ic62_compact_data.rs  ic63_status_mapping.rs  ic66_measurement_data.rs  ic6_register_activation.rs  ic7_profile_generic.rs  mod.rs
crates/dlms-cosem/src/internet/: ic47_tcp_udp_setup.rs  ic48_ipv4_setup.rs  ic57_ppp_setup.rs  ic58_gprs_setup.rs  ic59_sms_setup.rs  ic64_ipv6_setup.rs  mod.rs
crates/dlms-cosem/src/llc/: ic57_llc_type1_setup.rs  ic58_llc_type2_setup.rs  ic59_llc_type3_setup.rs  mod.rs
crates/dlms-cosem/src/local_comm/: ic100_lp_uart_setup.rs  ic101_rs485_setup.rs  ic102_infrared_setup.rs  ic103_modem_setup.rs  ic13_iec_local_port_setup.rs  ic14_iec_hdlc_setup.rs  ic15_iec_twisted_pair_setup.rs  ic16_iec_modem_setup.rs  mod.rs
crates/dlms-cosem/src/management/: ic02_association_sn_secure.rs  ic122_function_control.rs  ic123_array_manager.rs  ic124_comm_port_protection.rs  ic12_association_sn.rs  ic15_association_ln.rs  ic17_sap_assignment.rs  ic18_image_transfer.rs  ic30_data_protection.rs  ic40_push_setup.rs  ic43_logical_device.rs  ic44_physical_device.rs  ic62_security_policy.rs  ic64_security_setup.rs  mod.rs
crates/dlms-cosem/src/mbus/: ic76_mbus_client.rs  ic77_mbus_master_port_setup.rs  ic78_mbus_slave_port_setup.rs  ic79_mbus_slave_port_data.rs  ic80_mbus_master_data.rs  ic81_mbus_slave_port_identification.rs  mod.rs
crates/dlms-cosem/src/payment/: ic111_account.rs  ic112_credit.rs  ic113_charge.rs  ic115_token_gateway.rs  ic116_iec62055.rs  mod.rs
crates/dlms-cosem/src/plc/: mod.rs
crates/dlms-cosem/src/plc/g3/: ic160_g3_hybrid_rf_mac_counters.rs  ic161_g3_hybrid_rf_mac_setup.rs  ic162_g3_hybrid_sixlowpan_setup.rs  ic90_g3_mac_counters.rs  ic91_g3_mac_setup.rs  ic92_g3_sixlowpan_setup.rs  mod.rs
crates/dlms-cosem/src/plc/hs/: ic140_hs_mac_setup.rs  ic141_hs_cpas_setup.rs  ic142_hs_ip_ssas_setup.rs  ic143_hs_hdlc_ssas_setup.rs  mod.rs
crates/dlms-cosem/src/plc/prime/: ic80_prime_llc_sscs_setup.rs  mod.rs  (+6 more)
crates/dlms-cosem/src/time_control/: ic10_schedule.rs  ic11_special_days_table.rs  ic19_tariff_schedule.rs  ic20_activity_calendar.rs  ic21_register_monitor.rs  ic22_single_action_schedule.rs  ic24_display.rs  ic32_disconnector.rs  ic65_parameter_monitor.rs  ic67_sensor_manager.rs  ic68_arbitrator.rs  ic70_disconnect_control.rs  ic71_limiter.rs  ic8_clock.rs  ic9_script_table.rs  mod.rs
crates/dlms-cosem/src/wireless/: mod.rs
crates/dlms-hal/: Cargo.toml
crates/dlms-hal/src/: adc.rs  display.rs  flash.rs  gpio.rs  i2c.rs  lib.rs  modem.rs  relay.rs  rtc.rs  spi.rs  uart.rs  watchdog.rs
crates/dlms-hdlc/: Cargo.toml
crates/dlms-hdlc/src/: address.rs  config.rs  connection.rs  control.rs  crc.rs  frame.rs  lib.rs  llc.rs  segment.rs
crates/dlms-hdlc/tests/: boundary_tests.rs  framework_tests.rs  session_flow.rs
crates/dlms-hdlc/tests/helpers/: mod.rs
crates/dlms-host/: Cargo.toml
crates/dlms-host/src/: lib.rs
crates/dlms-host/src/cli/: mod.rs
crates/dlms-host/src/simulator/: mod.rs
crates/dlms-host/src/sniffer/: mod.rs
crates/dlms-host/src/test_runner/: mod.rs
crates/dlms-meter-app/: Cargo.toml
crates/dlms-meter-app/src/: alarm.rs  clock.rs  comm.rs  common.rs  control.rs  cosem_server.rs  firmware.rs  lib.rs  measurement.rs  meter_app.rs  profile.rs  tariff.rs
crates/dlms-obis/: Cargo.toml
crates/dlms-obis/src/: lib.rs  lookup.rs  parser.rs
crates/dlms-obis/src/codes/: abstract_objects.rs  ac_electricity.rs  china_gb.rs  dc_electricity.rs  gas.rs  mod.rs  other.rs  thermal.rs  water.rs
crates/dlms-rtos/: Cargo.toml
crates/dlms-rtos/src/: interrupt.rs  lib.rs  mempool.rs  mutex.rs  queue.rs  semaphore.rs  std_impl.rs  task.rs  timer.rs
crates/dlms-security/: Cargo.toml
crates/dlms-security/src/: aes_gcm.rs  context.rs  control.rs  hls.rs  key.rs  lib.rs  lls.rs  sm4_gmac.rs  system_title.rs
crates/virtual-meter/: Cargo.toml
crates/virtual-meter/src/: adc.rs  calibration.rs  demand.rs  demand_new.rs  display.rs  dlms.rs  dlms.rs.bak  freeze.rs  html_report.rs  iec62056.rs  lib.rs  load_profile.rs  meter.rs  persistence.rs  profile.rs  protocol.rs  pulse.rs  registers.rs  serial.rs  shell.rs  statistics.rs  tariff.rs  tcp_server.rs  tou.rs  web.rs
crates/virtual-meter/tests/: automated.rs  cosem_integration.rs
firmware/: .gitignore  Cargo.toml  FreeRTOSConfig.h  build.rs  build.sh  freertos_hooks.c  memory-boot.x  memory.x
firmware/.cargo/: config.toml
firmware/openocd/: fm33a068ev.cfg
firmware/output/: femeter.hex
firmware/src/: asr6601.rs  at_parser.rs  att7022e.rs  board.rs  boot.rs  calibration.rs  comm.rs  display.rs  dlms_stack.rs  event_detect.rs  fm33lg0.rs  freertos.rs  freertos_hooks.rs  hal.rs  key_scan.rs  lcd.rs  lcd_content.rs  main.rs  main_example.rs  metering.rs  ota.rs  power_manager.rs  quectel.rs  rn8302b.rs  rn8615v2.rs  rtc.rs  storage.rs  task_scheduler.rs  uart_driver.rs  watchdog.rs
(+96 files in other folders)
