[package]
name = "dlms-asn1"
version.workspace = true
edition.workspace = true
description = "ASN.1 BER encoder/decoder for DLMS/COSEM (AARQ/AARE/RLRQ/RLRE)"

[dependencies]
dlms-core = { workspace = true }
defmt = { version = "0.3", optional = true }

[features]
default = []
std = ["dlms-core/std"]
defmt-log = ["defmt", "dlms-core/defmt-log"]

[dev-dependencies]
