[package]
name = "dlms-axdr"
version.workspace = true
edition.workspace = true
description = "A-XDR encoder/decoder for DLMS/COSEM data types"

[dependencies]
dlms-core = { workspace = true }
defmt = { version = "0.3", optional = true }

[features]
default = []
std = ["dlms-core/std"]
defmt-log = ["defmt", "dlms-core/defmt-log"]

[dev-dependencies]

[lib]
doctest = false
