[package]
name = "dlms-hdlc"
version.workspace = true
edition.workspace = true
description = "HDLC link layer for DLMS/COSEM (frame encoding, CRC, segmentation)"

[dependencies]
dlms-core = { workspace = true }
defmt = { version = "0.3", optional = true }

[features]
default = []
std = ["dlms-core/std"]
defmt-log = ["defmt", "dlms-core/defmt-log"]

[dev-dependencies]
