[package]
name = "dlms-security"
version.workspace = true
edition.workspace = true
description = "DLMS/COSEM security: LLS/HLS authentication, AES-GCM-128 encryption"

[dependencies]
dlms-core = { workspace = true }
aes-gcm = { version = "0.10", default-features = false, features = ["aes"] }
defmt = { version = "0.3", optional = true }

[features]
default = []
std = ["dlms-core/std"]
defmt-log = ["defmt", "dlms-core/defmt-log"]

[dev-dependencies]
