[package]
name = "virtual-meter"
version = "1.0.0"
edition = "2021"
description = "跨平台虚拟电表，模拟 ATT7022E/RN8302B 计量芯片"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
crossterm = "0.28"
serialport = "4.5"
tracing = "0.1"
tracing-subscriber = "0.3"
clap = { version = "4", features = ["derive"] }

[features]
default = []
tcp = []

[[bin]]
name = "virtual-meter"
path = "src/bin/virtual_meter.rs"
